Fix the flash message close button sometimes disappearing on ie11 depending on length of text

--- a/app/assets/stylesheets/redesign/components/flash_messages.sass
+++ b/app/assets/stylesheets/redesign/components/flash_messages.sass
@@ -88,6 +88,7 @@
   background: inherit
   height: 18px
   width: 18px
+  min-width: 18px
   display: flex
   align-items: center
   justify-content: center
